--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1><a href="index.html">Lumia</a></h1>
+        <h1><a href="index.html">MyPet</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -85,9 +85,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
-      <h1>Welcome to <span>Lumia</span></h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h1>Welcome to <span>MyPet</span></h1>
+      <h2>Layanan Bagi Penyayang Binatang Dimanampun Kamu Berada</h2>
+      <a href="#about" class="btn-get-started scrollto">DAFTAR SEKARANG</a>
     </div>
   </section><!-- End Hero -->
 
@@ -98,32 +98,32 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>What We Do</h2>
-          <p>Magnam dolores commodi suscipit consequatur ex aliquid</p>
+          <h2>Layanan Kami</h2>
+          <p>Kami memberikan pelayanan untuk merawat hewan peliharaan</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Pet Rescue</a></h4>
+              <p>Menyelamatkan hewan dan membuat mereka merasakan rumah yang sebenarnya</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Konsultasi Kesehatan</a></h4>
+              <p>Konsultasikan kesehatan hewan peliharaan kamu, vaksin, dan steril!</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">MeetMe Comunity</a></h4>
+              <p>Temukan komunitas pecinta hewan dan layanan kesehatan serta petshop terdekat</p>
             </div>
           </div>
 
