--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1><a href="index.html">MyPet</a></h1>
+        <h1><a href="index.html">iDopt</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -143,7 +143,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>About Us</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              iDopt memberikan pelayanan terbaik dalam fasilitas hewan adopsi dengan para penyedia hewan maupun adopter. iDopt berdiri sejak tahun 2021.
             </p>
             <ul>
               <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
