--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
                 <ul>
                   <li><a href="#">Cat</a></li>
                   <li><a href="#">Dog</a></li>
-                  <li><a href="#">Turtle</a></li>
-                  <li><a href="#">Dragon</a></li>
-                  <li><a href="#">Rabbit</a></li>
                 </ul>
               </li>
             </ul>
@@ -341,8 +338,8 @@
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-app">Cat</li>
+              <li data-filter=".filter-card">Dog</li>
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
@@ -353,13 +350,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="link-preview venobox" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/cat-1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/cat-1.jpg" data-gall="portfolioGallery" class="link-preview venobox" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 1</a></h4>
+                <h4><a href="portfolio-details.html">Cat 1</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -383,13 +380,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-3.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/cat-2.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/cat-2.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 2</a></h4>
+                <h4><a href="portfolio-details.html">Cat 2</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -398,13 +395,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-4.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/dog-1.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Card 2</a></h4>
+                <h4><a href="portfolio-details.html">Dog 2</a></h4>
                 <p>Card</p>
               </div>
             </div>
@@ -428,13 +425,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-6.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/cat-3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/cat-3.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">App 3</a></h4>
+                <h4><a href="portfolio-details.html">Cat 3</a></h4>
                 <p>App</p>
               </div>
             </div>
@@ -443,13 +440,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-7.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/dog-2.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/dog-2.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Card 1</a></h4>
+                <h4><a href="portfolio-details.html">Dog 1</a></h4>
                 <p>Card</p>
               </div>
             </div>
@@ -458,13 +455,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-8.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/dog-3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/dog-3.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Card 3</a></h4>
+                <h4><a href="portfolio-details.html">Dog 3</a></h4>
                 <p>Card</p>
               </div>
             </div>
