change-index.html

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Cat</li>
               <li data-filter=".filter-card">Dog</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Reptile</li>
             </ul>
           </div>
         </div>
@@ -365,13 +365,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-2.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/reptile-3.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/reptile-3.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 3</a></h4>
+                <h4><a href="portfolio-details.html">Reptile 3</a></h4>
                 <p>Web</p>
               </div>
             </div>
@@ -395,8 +395,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/dog-1.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/dog-2.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/dog-2.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
@@ -410,13 +410,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-5.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/reptile-2.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/reptile-2.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 2</a></h4>
+                <h4><a href="portfolio-details.html">Reptile 2</a></h4>
                 <p>Web</p>
               </div>
             </div>
@@ -440,8 +440,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/dog-2.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/dog-2.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/dog-1.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
@@ -470,13 +470,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-9.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <img src="assets/img/portfolio/reptile-1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/reptile-1.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 1</a></h4>
+                <h4><a href="portfolio-details.html">Reptile 1</a></h4>
                 <p>Web</p>
               </div>
             </div>
@@ -708,7 +708,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Lumia</h3>
+            <h3>iDopt</h3>
             <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
@@ -742,7 +742,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Untuk mendapatkan berita terbaru!</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
