--- a/index.html
+++ b/index.html
@@ -710,11 +710,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>iDopt</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Jalan Kuningan Barat No. 92 <br>
+              Jakarta Selatan, Jakarta 37827<br>
+              Indonesia <br><br>
+              <strong>Phone:</strong> +62 0853 773621 55<br>
+              <strong>Email:</strong> contact@idopt.com<br>
             </p>
           </div>
 
