--- a/index.html
+++ b/index.html
@@ -52,16 +52,17 @@
             <ul>
               <li><a href="#about">About Us</a></li>
               <li><a href="#team">Team</a></li>
-              <li class="drop-down"><a href="#">Animal</a>
+              <li class="drop-down"><a href="#">Pet</a>
                 <ul>
                   <li><a href="#">Cat</a></li>
                   <li><a href="#">Dog</a></li>
+                  <li><a href="#">Reptile</a></li>
                 </ul>
               </li>
             </ul>
           </li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Animal</a></li>
+          <li><a href="#portfolio">Pets</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="#contact">Contact Us</a></li>
 
@@ -82,8 +83,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
       <h1>Welcome to <span>iDopt</span></h1>
-      <h2>Layanan Bagi Penyayang Binatang Dimanampun Kamu Berada</h2>
-      <a href="#about" class="btn-get-started scrollto">CARI HEWAN SEKARANG</a>
+      <h2>Layanan Bagi Penyayang Binatang Dimanapun Kamu Berada</h2>
+      <a href="#about" class="btn-get-started scrollto">FIND YOUR PET</a>
     </div>
   </section><!-- End Hero -->
 
@@ -94,8 +95,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Layanan Kami</h2>
-          <p>Kami memberikan pelayanan untuk merawat hewan peliharaan</p>
+          <h2>What We Do</h2>
+          <p>Kami memberikan pelayanan untuk hewan peliharaan Anda</p>
         </div>
 
         <div class="row">
@@ -142,21 +143,10 @@
               iDopt memberikan pelayanan terbaik dalam fasilitas hewan adopsi dengan para penyedia hewan maupun adopter. iDopt berdiri sejak tahun 2021.
             </p>
             <ul>
-              <li><i class="bx bx-check-double"></i> Menyelamatkan hewan dan membuat mereka merasakan rumah yang sebenarnya.</li>
-              <li><i class="bx bx-check-double"></i> Memberikan layanan konsultasi kesehatan hewan peliharaan kamu, vaksin, dan steril!</li>
-              <li><i class="bx bx-check-double"></i> Menemukan komunitas pecinta hewan dan layanan kesehatan serta petshop terdekat.</li>
+              <li><i class="bx bx-check-double"></i> Dipercaya oleh banyak pet lovers.</li>
+              <li><i class="bx bx-check-double"></i> Memberikan layanan terbaik.</li>
+              <li><i class="bx bx-check-double"></i> Mempertemukan hewan peliharaan dengan keluarga baru.</li>
             </ul>
-            <div class="row icon-boxes">
-              <div class="col-md-6">
-                <i class="bx bx-receipt"></i>
-                <h4>Sertifikat Adopsi</h4>
-                <p>kami memberikan jaminan keamanan dan privasi data pemilik maupun hewan. Sertifikat hewan adopsi terdaftar pada Nomer Induk Hewan RI</p>
-              </div>
-              <div class="col-md-6 mt-4 mt-md-0">
-                <i class="bx bx-cube-alt"></i>
-                <h4>Lacak Hewan Adopsi</h4>
-                <p>Hewan yang telah diadopsi mendapatkan fasilitas pelacakan lokasi hingga keamanan oleh tim kami</p>
-              </div>
             </div>
           </div>
         </div>
@@ -187,9 +177,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Konsultasi <i class="val">75%</i></span>
+              <span class="skill">Konsultasi <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -198,9 +188,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Pecinta Hewan <i class="val">80%</i></span>
+              <span class="skill">Pecinta Hewan <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -212,7 +202,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Gratis <i class="val">55%</i></span>
+              <span class="skill">Gratis <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -235,7 +225,7 @@
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
               <span data-toggle="counter-up">232</span>
-              <p>Happy Clients</p>
+              <p>Happy Adopters</p>
             </div>
           </div>
 
@@ -243,7 +233,7 @@
             <div class="count-box">
               <i class="icofont-document-folder"></i>
               <span data-toggle="counter-up">521</span>
-              <p>Projects</p>
+              <p>Pets</p>
             </div>
           </div>
 
@@ -251,15 +241,15 @@
             <div class="count-box">
               <i class="icofont-live-support"></i>
               <span data-toggle="counter-up">1,463</span>
-              <p>Hours Of Support</p>
+              <p>Good reviews</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p>Hard Workers</p>
+              <span data-toggle="counter-up">2,528</span>
+              <p>Families</p>
             </div>
           </div>
 
@@ -274,43 +264,43 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+          <p>Kami memberikan fasilitas terbaik yang berkaitan dengan hewan adopsi</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box">
-              <i class="icofont-computer"></i>
-              <h4><a href="#">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <i class="icofont-people"></i>
+              <h4><a href="#">Adopter</a></h4>
+              <p>Kami melakukan pemeriksaan kelayakan adopter. Kita memiliki standar tertentu untuk adopter agar dapat mengadopsi hewan peliharaan.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
-              <i class="icofont-chart-bar-graph"></i>
-              <h4><a href="#">Dolor Sitema</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <i class="icofont-certificate-alt-1"></i>
+              <h4><a href="#">Sertifikat Adopsi</a></h4>
+              <p>Kami memberikan jaminan keamanan dan privasi data pemilik maupun hewan. Sertifikat hewan adopsi terdaftar pada Nomer Induk Hewan RI.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
             <div class="icon-box">
-              <i class="icofont-image"></i>
-              <h4><a href="#">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <i class="icofont-verification-check"></i>
+              <h4><a href="#">Kondisi Terbaik</a></h4>
+              <p>Kami memastikan keadaan hewan peliharaan sehat dan dalam kondisi terbaik sebelum dan sesudah adopsi.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
             <div class="icon-box">
-              <i class="icofont-settings"></i>
-              <h4><a href="#">Nemo Enim</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <i class="icofont-location-pin"></i>
+              <h4><a href="#">Lacak Hewan Adopsi</a></h4>
+              <p>Hewan yang telah diadopsi mendapatkan fasilitas pelacakan lokasi hingga keamanan oleh tim kami.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
             <div class="icon-box">
               <i class="icofont-earth"></i>
-              <h4><a href="#">Magni Dolore</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4><a href="#">Keberagaman</a></h4>
+              <p>Kami menerima dan menyelamatkan smeua hewan peliharaan tanpa terkecuali.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
@@ -330,7 +320,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Animal</h2>
+          <h2>Pet</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit</p>
         </div>
 
@@ -630,7 +620,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga</p>
+          <p>For more information and enquiries, please let us know or fill out this form below.</p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -642,19 +632,19 @@
                 <div class="col-lg-4 info">
                   <i class="icofont-google-map"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <p>Jalan Kuningan Barat No. 92<br>Jakarta Selatan, Indonesia 37827</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="icofont-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>info@idopt.com<br>contact@idopt.com</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="icofont-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <p>+62 8537 73621 55<br>+62 8217 00664 55</p>
                 </div>
               </div>
             </div>
@@ -713,7 +703,7 @@
               Jalan Kuningan Barat No. 92 <br>
               Jakarta Selatan, Jakarta 37827<br>
               Indonesia <br><br>
-              <strong>Phone:</strong> +62 0853 773621 55<br>
+              <strong>Phone:</strong> +62 8537 73621 55<br>
               <strong>Email:</strong> contact@idopt.com<br>
             </p>
           </div>
@@ -730,13 +720,11 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Our Pets</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Cat</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Dog</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Reptile</a></li>
             </ul>
           </div>
 
