--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="section-title">
           <h2>What We Do</h2>
-          <p>Kami memberikan pelayanan untuk hewan peliharaan Anda</p>
+          <p>Kami memberikan pelayanan untuk hewan peliharaan kamu</p>
         </div>
 
         <div class="row">
@@ -264,7 +264,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Kami memberikan fasilitas terbaik yang berkaitan dengan hewan adopsi</p>
+          <p>Kami memberikan fasilitas terbaik untuk merawat hewan adopsi</p>
         </div>
 
         <div class="row">
@@ -306,8 +306,8 @@
           <div class="col-md-6 mt-4">
             <div class="icon-box">
               <i class="icofont-tasks-alt"></i>
-              <h4><a href="#">Eiusmod Tempor</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4><a href="#">Customer Service</a></h4>
+              <p>Kami menyediakan pelayanan terbaik dengan 24 jam customer services.</p>
             </div>
           </div>
         </div>
@@ -321,7 +321,7 @@
 
         <div class="section-title">
           <h2>Pet</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit</p>
+          <p>Upload hewan peliharaan kamu</p>
         </div>
 
         <div class="row">
