update-index.html

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Cat 1</a></h4>
-                <p>App</p>
+                <p>3 Tahun</p>
               </div>
             </div>
           </div>
@@ -362,7 +362,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Reptile 3</a></h4>
-                <p>Web</p>
+                <p>6 Bulan</p>
               </div>
             </div>
           </div>
@@ -377,7 +377,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Cat 2</a></h4>
-                <p>App</p>
+                <p>4 Tahun</p>
               </div>
             </div>
           </div>
@@ -392,7 +392,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Dog 2</a></h4>
-                <p>Card</p>
+                <p>5 tahun</p>
               </div>
             </div>
           </div>
@@ -407,7 +407,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Reptile 2</a></h4>
-                <p>Web</p>
+                <p>1 Tahun</p>
               </div>
             </div>
           </div>
@@ -422,7 +422,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Cat 3</a></h4>
-                <p>App</p>
+                <p>3 Tahun</p>
               </div>
             </div>
           </div>
@@ -437,7 +437,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Dog 1</a></h4>
-                <p>Card</p>
+                <p>6 Tahun</p>
               </div>
             </div>
           </div>
@@ -452,7 +452,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Dog 3</a></h4>
-                <p>Card</p>
+                <p>4 Tahun</p>
               </div>
             </div>
           </div>
@@ -467,7 +467,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="portfolio-details.html">Reptile 1</a></h4>
-                <p>Web</p>
+                <p>5 Tahun</p>
               </div>
             </div>
           </div>
@@ -483,7 +483,7 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+          <p>Telah banyak adopsi yang berhasil kami fasilitasi</p>
         </div>
 
         <div class="owl-carousel testimonials-carousel">
@@ -491,56 +491,56 @@
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              iDopt memberikan pelayanan terbaik dan membantu saya mengadopsi kucing lucu saya. Terima kasih iDopt.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
             <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <h4>Adopter</h4>
           </div>
 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+              Saya bisa menemukan rumah baru bagi hewan peliharaan saya berkat iDopt.com.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
             <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
+            <h4>Adoptee</h4>
           </div>
 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+              Saya bisa mempercayakan hewan peliharaan saya pada iDopt.com karena memiliki sistem adopsi yang terbaik.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
             <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
+            <h4>Adoptee</h4>
           </div>
 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+              Terima kasih iDopt.com! Berkat iDopt, saya dapat menemukan hewan peliharaan impian saya dan membantu mengurangi populasi hewan terlantar.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
+            <h4>Adopter</h4>
           </div>
 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+              Berkat iDopt, aku jadi punya teman baru yang sangat lucu.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
             <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
+            <h4>Adopter</h4>
           </div>
 
         </div>
