--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
           <div class="col-lg-3 col-6">
             <div class="count-box">
-              <i class="icofont-document-folder"></i>
+              <i class="icofont-paw"></i>
               <span data-toggle="counter-up">521</span>
               <p>Pets</p>
             </div>
